# learncpp

./: .gitignore  .gitmodules  CMakeLists.txt
docs/: devicecontrol.md
src/: main.cpp  messages.cpp  messages.hpp  result.hpp  server.cpp  server.hpp
